// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatMapChart - mouse events Should render callout correctly on mouseover 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_0"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_0"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_0"
        transform="translate(40, 0)"
      />
      <g
        aria-labelledby="10"
        data-is-focusable={true}
        fillOpacity="1"
        key="00"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(166, 207, 226)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        aria-labelledby="10"
        data-is-focusable={true}
        fillOpacity="1"
        key="10"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(159, 198, 222)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone2"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  key="0"
                  role="none"
                >
                  <button
                    aria-label="Execllent (0-200) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={1}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(144, 180, 215);
                            border-color: rgb(144, 180, 215);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Execllent (0-200)
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Callout-container
        {
          position: relative;
        }
  >
    <div
      className=
          ms-Callout
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            border-radius: 2px;
            box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
            box-sizing: border-box;
            display: flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            max-width: 238px;
            outline: transparent;
            position: absolute;
            z-index: 1000000;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            border-color: WindowText;
            border-style: solid;
            border-width: 1px;
          }
          &::-moz-focus-inner {
            border: 0px;
          }
      data-is-focusable={false}
      hidden={false}
      id="10"
      style={
        Object {
          "filter": "opacity(0)",
          "opacity": 0,
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}
    >
      <div
        className=
            ms-Callout-main
            {
              background-color: #ffffff;
              border-radius: 2px;
              overflow-x: hidden;
              overflow-y: auto;
              position: relative;
              width: 100%;
            }
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="text"
        style={
          Object {
            "maxHeight": "100%",
            "outline": "none",
            "overflowY": undefined,
          }
        }
      >
        <div
          className=

              {
                background-blend-mode: normal, luminosity;
                background-color: #ffffff;
                display: grid;
                overflow: hidden;
                padding-bottom: 10px;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 11px;
              }
        >
          <div
            className=

                {
                  display: flex;
                  flex-direction: row;
                  justify-content: space-between;
                }
          >
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #605e5c;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    line-height: 16px;
                    opacity: 0.8;
                  }
            >
               
            </div>
          </div>
          <div
            className=

                {
                  align-items: flex-end;
                  display: flex;
                }
          >
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border-left: 4px solid rgb(159, 198, 222);
                    color: #323130;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 28px;
                    font-weight: 600;
                    line-height: 22px;
                    margin-top: unset;
                    padding-left: 8px;
                  }
            >
              <div
                className=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #323130;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 12px;
                      font-weight: 400;
                      line-height: 16px;
                    }
              >
                Execllent (0-200)
              </div>
              <div
                className=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: rgb(159, 198, 222);
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 28px;
                      font-weight: bold;
                      line-height: 36px;
                    }
              >
                50
              </div>
            </div>
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #323130;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    margin-left: 6px;
                  }
            >
              <span
                className=

                    {
                      font-weight: 700;
                    }
              >
                50
              </span>
              /
              <span
                className=

                    {
                      font-weight: 600;
                    }
              >
                2,391
              </span>
            </div>
          </div>
          <div
            className=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border-top: 1px solid #c8c6c4;
                  color: #323130;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  margin-top: 10px;
                  padding-top: 10px;
                }
          >
            a good day to start with in Texas with best air quality
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeatMapChart snapShot testing renders HeatMapChart correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_0"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_0"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_0"
        transform="translate(40, 0)"
      />
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(166, 207, 226)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(159, 198, 222)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone2"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Execllent (0-200) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={1}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(144, 180, 215);
                            border-color: rgb(144, 180, 215);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Execllent (0-200)
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`HeatMapChart snapShot testing renders corretly even when data is not present for some group 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_3"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone4"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_3"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_3"
        transform="translate(40, 0)"
      />
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(255, 195, 195)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(255, 197, 186)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Execllent (0-200) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={2}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(255, 203, 169);
                            border-color: rgb(255, 203, 169);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(255, 203, 169), rgb(255, 203, 169));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Execllent (0-200)
                    </div>
                  </button>
                </div>
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Nasty selected"
                    aria-posinset={2}
                    aria-selected={false}
                    aria-setsize={2}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(255, 213, 135);
                            border-color: rgb(255, 213, 135);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(255, 213, 135), rgb(255, 213, 135));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Nasty
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`HeatMapChart snapShot testing renders hideLegend correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_6"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone7"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_6"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_6"
        transform="translate(40, 0)"
      />
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(166, 207, 226)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(159, 198, 222)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`HeatMapChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_8"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone9"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_8"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_8"
        transform="translate(40, 0)"
      />
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(166, 207, 226)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(159, 198, 222)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone10"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Execllent (0-200) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={1}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(144, 180, 215);
                            border-color: rgb(144, 180, 215);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Execllent (0-200)
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`HeatMapChart snapShot testing renders yAxisTickFormat correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_11"
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone12"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_11"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_11"
        transform="translate(40, 0)"
      />
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(-19.405940594059405, -7.227722772277229)"
      >
        <rect
          fill="rgb(166, 207, 226)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          25
        </text>
      </g>
      <g
        data-is-focusable={true}
        fillOpacity="1"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        transform="translate(10.297029702970299, -34.45544554455446)"
      >
        <rect
          fill="rgb(159, 198, 222)"
          height={26.683168316831683}
          width={29.10891089108911}
        />
        <text
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #ffffff;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 600;
                pointer-events: none;
              }
          dominantBaseline="middle"
          textAnchor="middle"
          transform="translate(14.554455445544555, 13.341584158415841)"
        >
          50
        </text>
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone13"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Execllent (0-200) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={1}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: rgb(144, 180, 215);
                            border-color: rgb(144, 180, 215);
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Execllent (0-200)
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;
